# xrootd-rados-cms

./: CMakeLists.txt  README.md  git.checkout.ceph  xrootd-rados-cms.spec
src/: CMakeLists.txt  RadosCms.cc  RadosCms.hh  RadosLocator.hh
